--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express-handlebars": "^3.0.0",
         "jest": "^25.1.0",
         "pg": "^8.6.0",
+        "pg-connection-string": "^2.5.0",
         "redis": "^2.8.0",
         "spiced-pg": "^1.0.4",
         "supertest": "^4.0.2"
